--- a/6 march 25/draw.html
+++ b/6 march 25/draw.html
@@ -69,7 +69,7 @@
   </head>
   <body>
   
-  <div class="bgimg-1">
+  <div class="bgimg-1">""
     <div class="caption">
     <span class="border">"Happiness held is the seed;happiness shared is the flower❤️"</span>
     </div>
